2009-09-07  Darren Kenny  <darren.kenny@sun.com>

	* capplet/capplet-utils.c: 
	  Fix an issue with capplet_model_find_object, where it wasn't ever
	  finding an object, causing the UI to not see a row-changed event
	  when toggling locations.
	* capplet/nwam_location_dialog.c, capplet/nwam_vpn_pref_dialog.c:
	  Fix defect#11045 where the remove button wasn't disabled for the
	  currently active ENM or Location, and for locations, also unset the
	  enabled flag on the prior location.

2009-09-07  Darren Kenny  <darren.kenny@sun.com>

	* daemon/nwam-wifi-item.c:
	  Add descriptions for wireless strength and security icons, 
	  fixing defect#11157.
	* capplet/nwam-manager-properties.ui:
	  Add 'label-for' to labels, fixing defect#10761.
	* capplet/nwam_rules_dialog.c: 
	  Add 'label-for' to label for created conditions table, also 
	  fixing defect#10761.
	* common/libnwamui.h, common/libnwamui.c: 
	  Add some a11y utility functions used for above fixes:
	  - nwamui_util_set_a11y_label_for_widget
	  - nwamui_util_set_widget_a11y_info.
	* capplet/capplet-utils.c: 
	  Fix issue found with duplicate name checking where it was checking
	  self too giving error.

2009-09-07  Darren Kenny  <darren.kenny@sun.com>

	* capplet/capplet-utils.c: 
	  Fix defect#10875 where duplicate names are allowed to be given to
	  locations. Adds a check before setting the name whether it
	  already exists or not.

2009-09-07  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/nwam-manager-properties.ui:
	* capplet/nwam_location_dialog.c (on_button_clicked):
	* capplet/nwam_rules_dialog.c (apply), (nwam_rules_dialog_init),
	(nwam_rules_dialog_finalize), (nwam_rules_dialog_run),
	(response_cb):
	* capplet/nwam_rules_dialog.h:
	* capplet/nwam_vpn_pref_dialog.c (on_rules_button_clicked):
	Scrollwindow doesn't support remove an inserted panel, so use vbox.
	Fixed 10787 [A11y] The Edit VPN rules window fails to adjust window
	size to expose all the widgets inside.
